[package]
name = "nwlt"
version = "0.1.0"
edition = "2021"

[dependencies]
encoding_rs = "0.8.33"
# mimalloc = "0.1.39"
widestring = "1.0.2"
winput = "0.2.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.winapi]
version = "0.3.9"
features = ["winuser", "shellapi"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1