[package]
name = "nwlt"
version = "0.1.0"
edition = "2021"

[dependencies]
encoding_rs = "0.8.33"
serde = { version = "1.0.193", features = ["derive"] }
serde_default = "0.1.0"
toml = "0.8.8"
# mimalloc = "0.1.39"
widestring = "1.0.2"
winput = { version = "0.2.5", features = ["serde"]}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.winapi]
version = "0.3.9"
features = ["winuser", "shellapi", "utilapiset"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
